Disable JS dialogs interventions while debugging

Otherwise you can only debug without switching to a different
tab, and only with docked DevTools.

Bug: 816202
Change-Id: I24b008cfccc9278b29236c78436da8ab78a91f5b
Reviewed-on: https://chromium-review.googlesource.com/950003
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541169}
Former-commit-id: 84a3a47c82199adcfb08158c613cc1d8a7b89c49