chrome/browser/ui/javascript_dialogs/javascript_dialog_tab_helper.cc
@@ -17,6 +17,7 @@
 #include "chrome/browser/ui/tabs/tab_strip_model.h"
 #include "components/app_modal/javascript_dialog_manager.h"
 #include "components/navigation_metrics/navigation_metrics.h"
+#include "content/public/browser/devtools_agent_host.h"
 #include "content/public/browser/navigation_handle.h"
 #include "content/public/browser/render_frame_host.h"
 #include "ui/gfx/text_elider.h"
@@ -207,7 +208,8 @@ void JavaScriptDialogTabHelper::RunJavaScriptDialog(
   CloseDialog(DismissalCause::SUBSEQUENT_DIALOG_SHOWN, false, base::string16());
 
   bool make_pending = false;
-  if (!IsWebContentsForemost(parent_web_contents)) {
+  if (!IsWebContentsForemost(parent_web_contents) &&
+      !content::DevToolsAgentHost::IsDebuggerAttached(parent_web_contents)) {
     switch (dialog_type) {
       case content::JAVASCRIPT_DIALOG_TYPE_ALERT: {
         // When an alert fires in the background, make the callback so that the
@@ -433,8 +435,10 @@ void JavaScriptDialogTabHelper::LogDialogDismissalCause(
 }
 
 void JavaScriptDialogTabHelper::HandleTabSwitchAway(DismissalCause cause) {
-  if (!dialog_)
+  if (!dialog_ || content::DevToolsAgentHost::IsDebuggerAttached(
+                      WebContentsObserver::web_contents())) {
     return;
+  }
 
   if (dialog_type_ == content::JAVASCRIPT_DIALOG_TYPE_ALERT) {
     // When the user switches tabs, make the callback so that the render process
